--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">GrapShare</string>
 
-    <string name="login_string">Already have an account? <b>Login here</b></string>
-<!--    <string name="API_KEY">AIzaSyCTk1d4U66Y4GPqSrfNB8VhBU4KUWP1TLY</string>-->
-        <string name="API_KEY">AIzaSyBEqEG65xCreG9XaxaSjDiFJTYI8n4tRa4</string>
-<!--        <string name="API_KEY">AIzaSyBivdveQCoYAhOEMd0xCUlKsPKSaq6nSA8</string>-->
-<!--        <string name="API_KEY">AIzaSyDsnD6Zh07hoK9b-NCWXBJ6N3gZ7mcgqFo</string>-->
+    <string name="login_string">Bạn đã có tài khoản? <b>Đăng nhập</b></string>
+    <!--    <string name="API_KEY">AIzaSyCTk1d4U66Y4GPqSrfNB8VhBU4KUWP1TLY</string>-->
+    <!--    <string name="API_KEY">AIzaSysdf1d4U66Y4GPqSrfNB8VhBU4KUWP1TLY</string>-->
+    <string name="API_KEY">AIzaSyBEqEG65xCreG9XaxaSjDiFJTYI8n4tRa4</string>
+    <!--        <string name="API_KEY">AIzaSyBivdveQCoYAhOEMd0xCUlKsPKSaq6nSA8</string>-->
+    <!--        <string name="API_KEY">AIzaSyDsnD6Zh07hoK9b-NCWXBJ6N3gZ7mcgqFo</string>-->
 
     <string name="open_navigation_drawer">Open Drawer</string>
     <string name="close_navigation_drawer">Open Drawer</string>
